# metascope

./: .gitignore  .prettierignore  .remarkrc.js  cspell.config.ts  eslint.config.ts  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json  tsdown.config.ts  vitest.config.ts
data/: codemeta-framing.json  codemeta.json  crosswalk.json
docs/: additional-notes.md  metascope-basic.json  metascope-template-codemeta.json  metascope-template-frontmatter.json  metascope-template-metadata.json  metascope-template-project.json  possible-sources.md
scripts/: fetch-test-fixtures.ts  generate-examples.ts  jsonld-loader.ts  match-scratch.ts  quick-test.ts  quicker-test.ts  scratch.ts  update-data.ts  utilities.ts
scripts/data/: context-cache.json
src/lib/: file-matching.ts  index.ts  jsonld-loader.ts  log.ts  metadata-types.ts  metadata.ts  source.ts  types.d.ts  types.ts  utilities.ts
src/lib/parsers/: arduino-library-properties-parser.ts  cargo-toml-parser.ts  cinder-cinderblock-parser.ts  codemeta-json-parser.ts  configparser-parser.ts  gemspec-parser.ts  go-mod-parser.ts  goreleaser-parser.ts  info-plist-parser.ts  library-properties-parser.ts  license-file-parser.ts  makefile-config-parser.ts  metadata-file-parser.ts  metadata-parser.ts  node-package-json-parser.ts  open-frameworks-addon-config-parser.ts  open-frameworks-install-xml-parser.ts  openframeworks-addon-config-mk-parser.ts  openframeworks-install-xml-parser.ts  package-json-parser.ts  pbxproj-parser.ts  pkg-info-parser.ts  pom-xml-parser.ts  processing-library-properties-parser.ts  properties-parser.ts  publiccode-parser.ts  publiccode-yaml-parser.ts  pyproject-toml-parser.ts  python-pyproject-toml-parser.ts  python-setup-py-parser.ts  readme-parser.ts  rfc822-header-parser.ts  setup-cfg-parser.ts  setup-py-parser.ts  xcode-info-plist-parser.ts
src/lib/presets/: index.ts  summary.ts
src/lib/sources/: arduino-library-properties.ts  cargo-toml.ts  cinder-cinderblock-xml.ts  cinder-cinderblock.ts  code-statistics.ts  code-stats.ts  codemeta-json.ts  codemeta.ts  dependency-updates.ts  file-statistics.ts  file-stats.ts  filesystem.ts  gemspec.ts  git-config.ts  git-statistics.ts  git-stats.ts  git.ts  github.ts  go-go-mod.ts  go-goreleaser-yaml.ts  go-mod.ts  goreleaser.ts  info-plist.ts  java-pom-xml.ts  license-file.ts  loc.ts  metadata-file.ts  metadata.ts  metascope.ts  node-npm-registry.ts  node-package-json.ts  npm.ts  obsidian-manifest-json.ts  obsidian-plugin-manifest-json.ts  obsidian-plugin-registry.ts  obsidian.ts  open-frameworks-addon-config.ts  open-frameworks-install-xml.ts  openframeworks-addon-config-mk.ts  openframeworks-install-xml.ts  (+26 more)
src/lib/templates/: codemeta.ts  flat.ts  frontmatter.ts  index.ts  metadata.ts  obsidian.ts  project.ts  summary.ts
src/lib/utilities/: codemeta-helpers.ts  fetch.ts  formatting.ts  license-identification.ts  schema-primitives.ts  template-helpers.ts  (+2 more)
test/: all-sources.test.ts  file-matching.bench.ts  metadata.test.ts  template.test.ts  utilities.test.ts  workspaces.test.ts
test/fixtures/all-sources/: .goreleaser.yml  Cargo.toml  Info.plist  PKG-INFO  README.md  addon_config.mk  all-sources.gemspec  cinderblock.xml  codemeta.json  go.mod  index.ts  install.xml  library.properties  manifest.json  metadata.json  package.json  pom.xml  publiccode.yml  pyproject.toml  setup.cfg  setup.py
test/fixtures/all-sources/AllSources.xcodeproj/: project.pbxproj
test/fixtures/cargo-toml/brumhard-masklint/: Cargo.toml
test/fixtures/cargo-toml/gmatht-joshell/: Cargo.toml
test/fixtures/cargo-toml/jookwang-park-watt-monitor-rs/: Cargo.toml
test/fixtures/python-setup-cfg/basic/: setup.cfg
test/fixtures/rust-cargo-toml/0x676e67-wreq-util/: Cargo.toml
test/fixtures/setup-cfg/with-urls/: setup.cfg
test/parsers/: arduino-library-properties-parser.test.ts  cargo-toml-parser.test.ts  cinder-cinderblock-parser.test.ts  cinder-cinderblock-xml-parser.test.ts  codemeta-json-parser.test.ts  gemspec-parser.test.ts  go-go-mod-parser.test.ts  go-goreleaser-yaml-parser.test.ts  go-mod-parser.test.ts  goreleaser-parser.test.ts  info-plist-parser.test.ts  java-pom-xml-parser.test.ts  license-file-parser.test.ts  metadata-file-parser.test.ts  metadata-parser.test.ts  node-package-json-parser.test.ts  open-frameworks-addon-config-parser.test.ts  open-frameworks-install-xml-parser.test.ts  openframeworks-addon-config-mk-parser.test.ts  openframeworks-install-xml-parser.test.ts  package-json-parser.test.ts  pbxproj-parser.test.ts  pkg-info-parser.test.ts  pom-xml-parser.test.ts  processing-library-properties-parser.test.ts  processing-sketch-properties-parser.test.ts  publiccode-parser.test.ts  publiccode-yaml-parser.test.ts  pyproject-toml-parser.test.ts  python-pkg-info-parser.test.ts  python-pyproject-toml-parser.test.ts  python-setup-cfg-parser.test.ts  python-setup-py-parser.test.ts  readme-file-parser.test.ts  readme-parser.test.ts  ruby-gemspec-parser.test.ts  rust-cargo-toml-parser.test.ts  setup-cfg-parser.test.ts  setup-py-parser.test.ts  xcode-info-plist-parser.test.ts  (+1 more)
test/sources/: arduino-library-properties.test.ts  cargo-toml.test.ts  cinder-cinderblock-xml.test.ts  cinder-cinderblock.test.ts  codemeta-json.test.ts  codemeta.test.ts  gemspec.test.ts  git-config.test.ts  git-statistics.test.ts  git.test.ts  go-go-mod.test.ts  go-goreleaser-yaml.test.ts  go-mod.test.ts  goreleaser.test.ts  info-plist.test.ts  java-pom-xml.test.ts  license-file.test.ts  metadata-file.test.ts  metadata.test.ts  node-package-json.test.ts  open-frameworks-addon-config.test.ts  open-frameworks-install-xml.test.ts  openframeworks-addon-config-mk.test.ts  openframeworks-install-xml.test.ts  package-json.test.ts  pbxproj.test.ts  pkg-info.test.ts  pom-xml.test.ts  processing-library-properties.test.ts  publiccode-yaml.test.ts  publiccode.test.ts  pypi.test.ts  pyproject-toml.test.ts  python-pkg-info.test.ts  python-pypi-registry.test.ts  python-pyproject-toml.test.ts  python-setup-cfg.test.ts  python-setup-py.test.ts  readme-file.test.ts  readme.test.ts  (+5 more)
(+737 files in other folders)
