[project]
name = "all-sources-fixture"
version = "1.0.0"
description = "A comprehensive test fixture."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Test Author", email = "test@example.com" },
]
maintainers = [
  { name = "Test Maintainer", email = "maintainer@example.com" },
]
keywords = ["test", "fixture"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "requests>=2.28",
  "click>=8.0",
]

[project.urls]
Homepage = "https://example.com/all-sources"
Repository = "https://github.com/test-org/all-sources"
Documentation = "https://docs.example.com/all-sources"
Issues = "https://github.com/test-org/all-sources/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
