[package]
name = "masklint"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
mask-parser = "0.2.2"
owo-colors = "3.5.0"
rstest = "0.25.0"
tempfile = "3.22.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
