[package]
name = "watt-monitor"
authors = ["Joo-Kwang Park <iam@jkpark.me>"]
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
csv = "1.4.0"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
signal-hook = "0.3"
