[metadata]
name = example-package
version = 1.2.3
author = Jane Smith
author_email = jane@example.com
maintainer = Bob Jones
maintainer_email = bob@example.com
description = A short description of the package
long_description = file: README.md
url = https://example.com/example-package
download_url = https://example.com/example-package/releases
license = MIT
keywords = example, test, metadata
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
install_requires =
    requests>=2.25.0
    click>=7.0
    pyyaml
python_requires = >=3.8
packages = find:

[options.extras_require]
dev =
    pytest>=6.0
    black
    mypy
docs =
    sphinx
    sphinx-rtd-theme
