[package]
name = "wreq-util"
description = "Common utilities for wreq"
repository = "https://github.com/0x676e67/wreq-util"
documentation = "https://docs.rs/wreq-util"
keywords = ["http", "client", "emulation", "ja3", "ja4"]
authors = ["0x676e67 <gngppz@gmail.com>"]
version = "3.0.0-rc.9"
readme = "README.md"
license = "LGPL-3.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["emulation"]

emulation = ["dep:typed-builder"]
emulation-serde = ["dep:serde"]
emulation-rand = ["emulation", "dep:strum_macros", "dep:strum"]
emulation-compression = []

tower-delay = ["dep:tower", "dep:pin-project-lite", "tokio/time"]

[dependencies]
wreq = { version = "6.0.0-rc.23", default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
typed-builder = { version = "0.23.2", optional = true }
strum = { version = "0.27.2", optional = true }
strum_macros = { version = "0.27.2", optional = true }
tokio = { version = "1.48.0", default-features = false, optional = true }
tower = { version = "0.5.2", default-features = false, optional = true }
pin-project-lite = { version = "0.2.16", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
hyper = { version = "1.8.1", default-features = false, features = [
	"http1",
	"http2",
	"client",
	"server",
] }
hyper-util = { version = "0.1.16", features = [
	"http1",
	"http2",
	"client",
	"client-legacy",
	"server-auto",
	"tokio",
] }
http = "1"
futures-util = { version = "0.3.0" }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
pin-project-lite = "0.2.0"
tracing = "0.1"
tracing-subscriber = "0.3.20"

[lib]
doctest = false

[[test]]
name = "client"
path = "tests/client.rs"

[[test]]
name = "emulation_chrome"
path = "tests/emulation_chrome.rs"

[[test]]
name = "emulation_okhttp"
path = "tests/emulation_okhttp.rs"

[[test]]
name = "emulation_firefox"
path = "tests/emulation_firefox.rs"

[[test]]
name = "emulation_safari"
path = "tests/emulation_safari.rs"

[[example]]
name = "emulation"
path = "examples/emulation.rs"
required-features = ["emulation"]

[[example]]
name = "emulation_rand"
path = "examples/emulation_rand.rs"
required-features = ["emulation", "emulation-rand"]

[[example]]
name = "emulation_option"
path = "examples/emulation_option.rs"
required-features = ["emulation"]

[[example]]
name = "tower_delay"
path = "examples/tower_delay.rs"
required-features = ["tower-delay"]

[[example]]
name = "tower_jitter_delay"
path = "examples/tower_jitter_delay.rs"
required-features = ["tower-delay"]
