[metadata]
name = urltest
version = 0.5.0
author = Alice Developer
author_email = alice@dev.org
description = Package with project URLs
license = Apache-2.0

project_urls =
    Homepage = https://urltest.dev
    Repository = https://github.com/alice/urltest
    Bug Tracker = https://github.com/alice/urltest/issues
    Documentation = https://urltest.readthedocs.io

[options]
install_requires =
    flask>=2.0
python_requires = >=3.9
